--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 		<div class="footer">
 			Please support the official game <a href="http://www.starrealms.com/">here.</a><br />
 			Star Realms is &copy;2013 White Wizard Games.
+			Contact me <a href="mailto:info@starrealmscounter.com">here.</a>
 		</div>
 		<script>
 			function add(player, num) {
