--- a/2p.html
+++ b/2p.html
@@ -45,12 +45,7 @@
 		}
 		
 		.refresh {
-				position: absolute;
 				font-size: 1.3em;
-				display: inline-block;
-				float: right;
-				right: 10px;
-				top: 10px;
 			}
 		
 		
@@ -82,6 +77,11 @@
 				font-size: 2em;
 		}
 		
+		.playerTwo {
+			transform: rotate(180deg);
+			-webkit-transform: -webkit-rotate(180deg);
+		}
+		
 		a.playerLink {
 			font-size: 1.3em;
 			margin: 0px 10px;
@@ -106,35 +106,34 @@
 			
 			.refresh {
 				position: absolute;
-				font-size: 1.3em;
-				display: inline-block;
-				float: right;
+				font-size: 0.5em;
 				right: 10px;
-				top: 10px;
 			}
 			
 			button.refresh {
 				background: white;
-				width: 2.2em;
-				height: 2.2em;
+				width: 1em;
+				height: 1em;
 				border: 3px solid black;
 				border-radius: 50%;
 				z-index: 998;
 			}
 
 			.lifeTotal {
-				font-size: 8em;
+				font-size: 5em;
 				font-weight: 600;
+				z-index: 1;
 			}
 
 			.btn {
-				font-size: 1.5em;
+				font-size: 1em;
 				font-weight: 300;
 				width: 100%;
 				margin: 3px 0;
-				padding: 5px 0;
+				padding: 3px 0;
 				background: white;
 				border: 3px solid black;
+				z-index: 997;
 			}
 			.footer {
 				margin-top: 2em;
@@ -148,31 +147,76 @@
 		and (orientation : portrait) { 
 			.refresh {
 				position: absolute;
-				font-size: 1.5em;
-				display: inline-block;
-				float: right;
-				right: 10px;
-				top: 10px;
+				font-size: 1em;
+				left-margin: 50%;
 			}
 			
 			button.refresh {
 				background: white;
-				width: 2.2em;
-				height: 2.2em;
+				width: 2em;
+				height: 2em;
 				border: 3px solid black;
 				border-radius: 50%;
 				z-index: 998;
+			}
+			.playerTwo {
+			transform: rotate(180deg);
+			-webkit-transform: -webkit-rotate(180deg);
+			-ms-transform: rotate(180deg);
 			}
 		}
 		</style>
 	</head>
 	<body>
+		<span><a href="index.html" class="playerLink">1-P</a></span><span><a href="2p.html" class="playerLink">2-P</a></span>
+		<div class="container-fluid playerTwo">
+			<div class="row">
+				<div class="col-xs-6">
+					<button class="btn" onclick="add('life2', 1);">+1</button>
+				</div>
+				<div class="col-xs-6">
+					<button class="btn" onclick="subtract('life2', 1);">-1</button>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6">
+					<button class="btn" onclick="add('life2', 5);">+5</button>
+				</div>
+				<div class="col-xs-6">
+					<button class="btn" onclick="subtract('life2', 5);">-5</button>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6">
+					<button class="btn" onclick="add('life2', 10);">+10</button>
+				</div>
+				<div class="col-xs-6">
+					<button class="btn" onclick="subtract('life2', 10);">-10</button>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6">
+					<button class="btn" onclick="add('life2', 20);">+20</button>
+				</div>
+				<div class="col-xs-6">
+					<button class="btn" onclick="subtract('life2', 20);">-20</button>
+				</div>
+			</div>
+		</div>
+
 		<div class="container-fluid">
 			<div class="row">
-				<p><span><a href="index.html" class="playerLink">1-P</a></span><span><a href="2p.html" class="playerLink">2-P</a></span><br />Current Authority:</p>
+				<div class="col-xs-6">
+					<div id="life2" class="col-xs-12 lifeTotal playerTwo">50</div>
+				</div>
 				<button id="refreshBtn" class="refresh"><i class="fa fa-refresh"></i></button>
-				<div id="life" class="col-xs-12 lifeTotal">50</div>
+				<div class="col-xs-6">
+					<div id="life" class="col-xs-12 lifeTotal">50</div>
+				</div>
 			</div>
+		</div>
+		
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xs-6">
 					<button class="btn" onclick="add('life', 1);">+1</button>
@@ -206,6 +250,7 @@
 				</div>
 			</div>
 		</div>
+		
 		<div class="footer">
 			Please support the official game <a href="http://www.starrealms.com/">here.</a><br />
 			Star Realms is &copy;2013 White Wizard Games. <br />
@@ -228,6 +273,7 @@
 			}
 			function refresh() {
 				document.getElementById("life").innerHTML = "50";
+				document.getElementById("life2").innerHTML = "50";
 			}
 			
 			var refreshBtn = document.getElementById("refreshBtn");
